# internal/models/user_signup.go
@@ -1,0 +1,101 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+	"github.com/go-openapi/validate"
+)
+
+// UserSignup Параметры для регистрации
+//
+// swagger:model UserSignup
+type UserSignup struct {
+
+	// Email
+	// Required: true
+	// Format: email
+	Email strfmt.Email `json:"email"`
+
+	// Имя пользователя
+	// Example: Дроздобород Эдуард
+	Name string `json:"name"`
+
+	// Место работы
+	// Example: МУП ДЭС
+	Occupation string `json:"occupation"`
+
+	// Пароль
+	// Required: true
+	Password string `json:"password"`
+}
+
+// Validate validates this user signup
+func (m *UserSignup) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateEmail(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validatePassword(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *UserSignup) validateEmail(formats strfmt.Registry) error {
+
+	if err := validate.Required("email", "body", strfmt.Email(m.Email)); err != nil {
+		return err
+	}
+
+	if err := validate.FormatOf("email", "body", "email", m.Email.String(), formats); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *UserSignup) validatePassword(formats strfmt.Registry) error {
+
+	if err := validate.RequiredString("password", "body", m.Password); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+// ContextValidate validates this user signup based on context it is used
+func (m *UserSignup) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *UserSignup) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *UserSignup) UnmarshalBinary(b []byte) error {
+	var res UserSignup
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
