# internal/restapi/operations/other/post_signup_responses.go
@@ -1,104 +1,0 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
-package other
-
-// This file was generated by the swagger tool.
-// Editing this file might prove futile when you re-run the swagger generate command
-
-import (
-	"net/http"
-
-	"github.com/go-openapi/runtime"
-
-	"otusgruz/internal/models"
-)
-
-// PostSignupOKCode is the HTTP code returned for type PostSignupOK
-const PostSignupOKCode int = 200
-
-/*
-PostSignupOK Успешная Регистрация
-
-swagger:response postSignupOK
-*/
-type PostSignupOK struct {
-
-	/*
-	  In: Body
-	*/
-	Payload *models.DefaultStatusResponse `json:"body,omitempty"`
-}
-
-// NewPostSignupOK creates PostSignupOK with default headers values
-func NewPostSignupOK() *PostSignupOK {
-
-	return &PostSignupOK{}
-}
-
-// WithPayload adds the payload to the post signup o k response
-func (o *PostSignupOK) WithPayload(payload *models.DefaultStatusResponse) *PostSignupOK {
-	o.Payload = payload
-	return o
-}
-
-// SetPayload sets the payload to the post signup o k response
-func (o *PostSignupOK) SetPayload(payload *models.DefaultStatusResponse) {
-	o.Payload = payload
-}
-
-// WriteResponse to the client
-func (o *PostSignupOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
-
-	rw.WriteHeader(200)
-	if o.Payload != nil {
-		payload := o.Payload
-		if err := producer.Produce(rw, payload); err != nil {
-			panic(err) // let the recovery middleware deal with this
-		}
-	}
-}
-
-// PostSignupInternalServerErrorCode is the HTTP code returned for type PostSignupInternalServerError
-const PostSignupInternalServerErrorCode int = 500
-
-/*
-PostSignupInternalServerError Серверная ошибка
-
-swagger:response postSignupInternalServerError
-*/
-type PostSignupInternalServerError struct {
-
-	/*
-	  In: Body
-	*/
-	Payload *models.Error `json:"body,omitempty"`
-}
-
-// NewPostSignupInternalServerError creates PostSignupInternalServerError with default headers values
-func NewPostSignupInternalServerError() *PostSignupInternalServerError {
-
-	return &PostSignupInternalServerError{}
-}
-
-// WithPayload adds the payload to the post signup internal server error response
-func (o *PostSignupInternalServerError) WithPayload(payload *models.Error) *PostSignupInternalServerError {
-	o.Payload = payload
-	return o
-}
-
-// SetPayload sets the payload to the post signup internal server error response
-func (o *PostSignupInternalServerError) SetPayload(payload *models.Error) {
-	o.Payload = payload
-}
-
-// WriteResponse to the client
-func (o *PostSignupInternalServerError) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
-
-	rw.WriteHeader(500)
-	if o.Payload != nil {
-		payload := o.Payload
-		if err := producer.Produce(rw, payload); err != nil {
-			panic(err) // let the recovery middleware deal with this
-		}
-	}
-}
