# internal/restapi/operations/user_c_r_u_d/post_user_responses.go
@@ -1,149 +1,0 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
-package user_c_r_u_d
-
-// This file was generated by the swagger tool.
-// Editing this file might prove futile when you re-run the swagger generate command
-
-import (
-	"net/http"
-
-	"github.com/go-openapi/runtime"
-
-	"otusgruz/internal/models"
-)
-
-// PostUserOKCode is the HTTP code returned for type PostUserOK
-const PostUserOKCode int = 200
-
-/*
-PostUserOK Успешное создание пользователя
-
-swagger:response postUserOK
-*/
-type PostUserOK struct {
-
-	/*
-	  In: Body
-	*/
-	Payload *models.DefaultStatusResponse `json:"body,omitempty"`
-}
-
-// NewPostUserOK creates PostUserOK with default headers values
-func NewPostUserOK() *PostUserOK {
-
-	return &PostUserOK{}
-}
-
-// WithPayload adds the payload to the post user o k response
-func (o *PostUserOK) WithPayload(payload *models.DefaultStatusResponse) *PostUserOK {
-	o.Payload = payload
-	return o
-}
-
-// SetPayload sets the payload to the post user o k response
-func (o *PostUserOK) SetPayload(payload *models.DefaultStatusResponse) {
-	o.Payload = payload
-}
-
-// WriteResponse to the client
-func (o *PostUserOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
-
-	rw.WriteHeader(200)
-	if o.Payload != nil {
-		payload := o.Payload
-		if err := producer.Produce(rw, payload); err != nil {
-			panic(err) // let the recovery middleware deal with this
-		}
-	}
-}
-
-// PostUserForbiddenCode is the HTTP code returned for type PostUserForbidden
-const PostUserForbiddenCode int = 403
-
-/*
-PostUserForbidden Клиентская ошибка
-
-swagger:response postUserForbidden
-*/
-type PostUserForbidden struct {
-
-	/*
-	  In: Body
-	*/
-	Payload *models.DefaultStatusResponse `json:"body,omitempty"`
-}
-
-// NewPostUserForbidden creates PostUserForbidden with default headers values
-func NewPostUserForbidden() *PostUserForbidden {
-
-	return &PostUserForbidden{}
-}
-
-// WithPayload adds the payload to the post user forbidden response
-func (o *PostUserForbidden) WithPayload(payload *models.DefaultStatusResponse) *PostUserForbidden {
-	o.Payload = payload
-	return o
-}
-
-// SetPayload sets the payload to the post user forbidden response
-func (o *PostUserForbidden) SetPayload(payload *models.DefaultStatusResponse) {
-	o.Payload = payload
-}
-
-// WriteResponse to the client
-func (o *PostUserForbidden) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
-
-	rw.WriteHeader(403)
-	if o.Payload != nil {
-		payload := o.Payload
-		if err := producer.Produce(rw, payload); err != nil {
-			panic(err) // let the recovery middleware deal with this
-		}
-	}
-}
-
-// PostUserInternalServerErrorCode is the HTTP code returned for type PostUserInternalServerError
-const PostUserInternalServerErrorCode int = 500
-
-/*
-PostUserInternalServerError Серверная ошибка
-
-swagger:response postUserInternalServerError
-*/
-type PostUserInternalServerError struct {
-
-	/*
-	  In: Body
-	*/
-	Payload *models.Error `json:"body,omitempty"`
-}
-
-// NewPostUserInternalServerError creates PostUserInternalServerError with default headers values
-func NewPostUserInternalServerError() *PostUserInternalServerError {
-
-	return &PostUserInternalServerError{}
-}
-
-// WithPayload adds the payload to the post user internal server error response
-func (o *PostUserInternalServerError) WithPayload(payload *models.Error) *PostUserInternalServerError {
-	o.Payload = payload
-	return o
-}
-
-// SetPayload sets the payload to the post user internal server error response
-func (o *PostUserInternalServerError) SetPayload(payload *models.Error) {
-	o.Payload = payload
-}
-
-// WriteResponse to the client
-func (o *PostUserInternalServerError) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
-
-	rw.WriteHeader(500)
-	if o.Payload != nil {
-		payload := o.Payload
-		if err := producer.Produce(rw, payload); err != nil {
-			panic(err) // let the recovery middleware deal with this
-		}
-	}
-}
